Closed
Bug 1425565
Opened 8 years ago
Closed 7 years ago
scrolling on github review of a PR certain elements don't scroll with the rest of the page, position:sticky not working
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla62
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | disabled |
| firefox57 | --- | unaffected |
| firefox58 | --- | unaffected |
| firefox59 | --- | disabled |
| firefox60 | --- | disabled |
| firefox61 | --- | disabled |
| firefox62 | --- | disabled |
People
(Reporter: automatedtester, Assigned: kats)
References
(Blocks 1 open bug, )
Details
Attachments
(3 files)
STR:
1) Go to a Github PR that you can review
2) Click on the Files changed tab
3) click on review changes. This will display a new div
4) scroll quickly up and down the page certain elements have a lag in scrolling on the page
| Reporter | ||
Updated•8 years ago
|
OS: Unspecified → Mac OS X
Hardware: Unspecified → x86_64
Updated•8 years ago
|
Blocks: webrender-site-issues
status-firefox57:
--- → unaffected
status-firefox58:
--- → unaffected
status-firefox59:
--- → disabled
status-firefox-esr52:
--- → unaffected
Version: unspecified → Trunk
Updated•8 years ago
|
Blocks: stage-wr-trains
Priority: -- → P1
| Assignee | ||
Comment 1•8 years ago
|
||
I can repro; click on the URL, click on the "Review Changes" button to get the little dialog showing, and then scroll up and down. The sticky header is misplaced when you scroll into areas where a sticky adjustment would have taken place. Note that this doesn't happen when the dialog is not showing.
Based on the symptoms I suspect it's the same problem as bug 1424686, and will need the updated clipping API to fix.
Updated•8 years ago
|
OS: Mac OS X → All
Comment 3•7 years ago
|
||
On Github there's a position:fixed element inside of the position:sticky element which causes breakage.
Updated•7 years ago
|
Summary: scrolling on github review of a PR certain elements don't scroll with the rest of the page → scrolling on github review of a PR certain elements don't scroll with the rest of the page, position:sticky not working
Updated•7 years ago
|
status-firefox60:
--- → disabled
status-firefox61:
--- → disabled
status-firefox62:
--- → disabled
status-firefox-esr60:
--- → disabled
| Assignee | ||
Comment 6•7 years ago
|
||
The presence of the fixed-pos item inside the sticky-pos item seems to change the ASR for the sticky item from being the root content scrollframe to just asr(), and that seems to result in the observed behaviour. I'm not sure why the ASR for the sticky item changes, but it seems wrong.
| Assignee | ||
Comment 7•7 years ago
|
||
https://searchfox.org/mozilla-central/rev/eb6c5214a63e20a3fff455e92c876287a8d2e188/layout/generic/nsFrame.cpp#3438-3441
The comment there seems to explain why this is the case.
| Assignee | ||
Comment 8•7 years ago
|
||
Kind of a hacky fix, but seems to work on the test case:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=702be18fcc1c8253299515155cad5fbb7644984f
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 11•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8974953 [details]
Bug 1425565 - Use the container ASR for sticky items when building WebRender clips.
https://reviewboard.mozilla.org/r/243344/#review251166
Attachment #8974953 -
Flags: review?(mstange) → review+
Comment 12•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8974954 [details]
Bug 1425565 - Add a reftest.
https://reviewboard.mozilla.org/r/243346/#review251168
Attachment #8974954 -
Flags: review?(mstange) → review+
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 15•7 years ago
|
||
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2a2b4256407a
Use the container ASR for sticky items when building WebRender clips. r=mstange
https://hg.mozilla.org/integration/autoland/rev/e9f8e4d5aef7
Add a reftest. r=mstange
Comment 16•7 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/2a2b4256407a
https://hg.mozilla.org/mozilla-central/rev/e9f8e4d5aef7
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in
before you can comment on or make changes to this bug.
Description
•